<resources>
    <string name="app_name">TheChanceRamadanTask</string>
    <string name="ramadan_kareem">Ramadan Kareem</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sehri">Sehri</string>
    <string name="sehri_time">3:40 am</string>
    <string name="iftar">Iftar</string>
    <string name="iftar_time">6:50 am</string>
    <string name="taraweh">Taraweh</string>
    <string name="taraweh_time">7:30 am</string>
    <string name="quran_daily_read">Quran Daily Read</string>
    <string name="daily_read_part">part: 3</string>
</resources>